Fix spacing and sizes in #wiecej

--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
           </div>
         </div>
         <div class="row">
-        <div class="col-md-9 row">
+        <div class="col-md-9">
+          <div class="row mb-4">
           <div class="col-md-4">
           <a href="https://centrumcyfrowe.pl/wiedza-o-reformie/" target="_blank">
             <img src="/assets/longread2.png" />
@@ -353,7 +354,8 @@
             </a>
           </div>
         </div>
-        <div class="col-md-3">
+        </div>
+        <div class="col-md-3 smtext">
             <p><strong>Kontakt dla mediów:</strong></p>
             <p>Amelia Kurp<br />
             <a href="mailto:a.kurp@sciencepr.pl">a.kurp@sciencepr.pl</a><br />
