Replace CC logo in code, minor adjustments to styling of slides

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           </div>
           <div class="col-md-4">
             <a href="https://centrumcyfrowe.pl" target="_blank">
-            <img src="/assets/CClogo.png" />
+            <img src="/assets/CClogo.svg" />
             <p class="mt-4">Poznaj centrum cyfrowe</p>
           </a>
           </div>
