Add 2x2 grid for dots on slide 2

--- a/index.html
+++ b/index.html
@@ -82,36 +82,44 @@
         </div>
       </div>
         <div class="ob-group">
-          <div class="ob ob-md">&nbsp;</div>
-          <div class="ob ob-md">&nbsp;</div>
-          <div class="ob ob-md">&nbsp;</div>
-          <div class="ob ob-md">&nbsp;</div>
+          <div class="ob-item"><div class="ob ob-md">&nbsp;</div></div>
+          <div class="ob-item"><div class="ob ob-md">&nbsp;</div></div>
+          <div class="ob-item"><div class="ob ob-md">&nbsp;</div></div>
+          <div class="ob-item"><div class="ob ob-md">&nbsp;</div></div>
         </div>
-        <div class="ob-group">
-            <a href="#zagrozenia">
-            <div class="title-label md">
-              <h1>Poznaj</h1><br />
-              <h1>Zagrożenia</h1>
+        <div class="ob-group ob-link">
+            <div class="ob-item">
+              <a href="#zagrozenia">
+              <div class="title-label md">
+                <h1>Poznaj</h1><br />
+                <h1>Zagrożenia</h1>
+              </div>
+              </a>
             </div>
-            </a>
-            <a href="https://www.facebook.com/events/2104206849807052/" target="_blank">
-            <div class="title-label md">
-              <h1>Dołącz</h1><br />
-              <h1>Na&nbsp;FB</h1>
+            <div class="ob-item">
+              <a href="https://www.facebook.com/events/2104206849807052/" target="_blank">
+              <div class="title-label md">
+                <h1>Dołącz</h1><br />
+                <h1>Na&nbsp;FB</h1>
+              </div>
+              </a>
             </div>
-            </a>
-            <a href="http:/saveyourinternet.eu" target="_blank">
-            <div class="title-label md pull-10">
-              <h1>Dołącz:</h1><br />
-              <h1>#saveyourinternet</h1>
+            <div class="ob-item">
+              <a href="http:/saveyourinternet.eu" target="_blank">
+              <div class="title-label md pull-10">
+                <h1>Dołącz:</h1><br />
+                <h1>#saveyourinternet</h1>
+              </div>
+              </a>
             </div>
-            </a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://centrumcyfrowe.pl/reforma" target="_blank">
-            <div class="title-label md">
-              <h1>Podaj</h1><br />
-              <h1>Dalej</h1>
+            <div class="ob-item">
+              <a href="https://www.facebook.com/sharer/sharer.php?u=https://centrumcyfrowe.pl/reforma" target="_blank">
+              <div class="title-label md">
+                <h1>Podaj</h1><br />
+                <h1>Dalej</h1>
+              </div>
+              </a>
             </div>
-            </a>
         </div>
       <div class="container">
         <div class="row">
