Add link to CC logo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header id="top" class="container-fluid slide slide-1">
       <div class="niebo">&nbsp;</div>
-      <div class="cc-logo">&nbsp;</div>
+      <a href="https://centrumcyfrowe.pl"><div class="cc-logo">&nbsp;</div></a>
       <div class="container">
         <div class="ob1 ob ob-xl">&nbsp;</div>
         <div class="ob2 ob ob-sm">&nbsp;</div>
