Fix display of timeline slide's titles

--- a/index.html
+++ b/index.html
@@ -250,13 +250,15 @@
     <section id="codalej" class="container-fluid slide slide-4">
       <div class="okowizjer">&nbsp;</div>
       <div class="kropeczki k1">&nbsp;</div>
-      <div class="title-label t1">
-        <h1>Do&nbsp;kiedy</h1><br />
-        <h1>Mamy&nbsp;czas?</h1>
-      </div>
-      <div class="title-label pulled d-none d-sm-block">
-        <h1>I&nbsp;co&nbsp;się</h1><br />
-        <h1>Będzie&nbsp;działo</h1>
+      <div class="titles row">
+        <div class="title-label col-sm-6 t1">
+          <h1>Do&nbsp;kiedy</h1><br />
+          <h1>Mamy&nbsp;czas?</h1>
+        </div>
+        <div class="title-label col-sm-6 t2 d-none d-sm-block">
+          <h1>I&nbsp;co&nbsp;się</h1><br />
+          <h1>Będzie&nbsp;działo</h1>
+        </div>
       </div>
       <div class="series">
       <div class="card c1">
