--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="twitter:site" content="@centrumcyfrowe" />
     <meta name="twitter:image" content="dist/images/internetjestdlaludzi/ludzie-ziemia.png" />
     <meta name="twitter:creator" content="@centrumcyfrowe" />
-    <link rel="stylesheet" href="dist/css/internetjestdlaludzi2.css" />
+    <link rel="stylesheet" href="dist/css/internetjestdlaludzi.css" />
     <link href="https://fonts.googleapis.com/css?family=Muli:400,800|Open+Sans:400&amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
@@ -93,7 +93,7 @@
               </a>
             </div>
             <div class="ob-item">
-              <a href="http:/saveyourinternet.eu" target="_blank">
+              <a href="http://pl.saveyourinternet.eu" target="_blank">
               <div class="title-label md pull-10">
                 <h1>Dołącz:</h1><br />
                 <h1>#saveyourinternet</h1>
@@ -245,6 +245,34 @@
           </div>
         </div>
       </article>
+      <h1 class="recent-news">Co nowego na froncie?</h1>
+      <!--\\
+      <?php
+          $args = array(
+              'post_type' => 'czytelnia',
+              'posts_per_page' => 1,
+              'tag' => 'reforma-prawa-autorskiego'
+          );
+          $loop = new wp_Query($args);
+          while($loop->have_posts()) {
+            $loop->the_post();
+      ?>
+      //-->
+      <article>
+        <div class="col1">
+          <div class="card">
+            <div class="card-body">
+              <a href="<?=get_permalink()?>">
+              <?php the_title('<h2 class="card-title">', '</h2>'); ?>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col2">
+          <div class="obrazek z1">&nbsp;</div>
+        </div>
+      </article>
+      <?php } ?>
       </div>
     </section>
     <section id="codalej" class="container-fluid slide slide-4">
@@ -346,7 +374,7 @@
           </a>
           </div>
           <div class="col-md-4">
-            <a href="https://saveyourinternet.eu" target="_blank">
+            <a href="https://pl.saveyourinternet.eu" target="_blank">
             <img src="/assets/saveyourinternet.png" />
             <p class="mt-4">#SAVEYOURINTERNET</p>
             </a>
@@ -361,6 +389,10 @@
         </div>
         </div>
       </div>
+    <div class="container">
+        Projekt jest realizowany przy wsparciu 
+        <a href="https://www.opensocietyfoundations.org/">Open Society Foundations</a>
+    </div>
     </section>
   <footer></footer>
   <div class="overlay-wrapper">
@@ -376,7 +408,7 @@
     </div>
   </div>
   </div>
-  <script src="dist/js/internetjestdlaludzi2.js"></script>
+  <script src="dist/js/internetjestdlaludzi.js"></script>
   <script type="text/javascript">var _paq = _paq || []; _paq.push(["trackPageView"]); _paq.push(["enableLinkTracking"]); (function() { var u ="https://piwik.centrumcyfrowe.pl/"; _paq.push(["setTrackerUrl", u+"piwik.php"]); _paq.push(["setSiteId", "3"]); var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript"; g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s); })();</script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124576176-1"></script>
   <script>
